Add switch player function to get current_player

--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
         <table class='center'>
             <tbody>
                 <tr>
-                    <td class='align'><div id='player1' class='names'>Player 1</div></td>
-                    <td><div id='1' class='square bottom right'></div></td>
-                    <td><div id='2' class='square bottom right'></div></td>
-                    <td><div id='3' class='square bottom'></div></td>
+                    <td class='align'><div id='player1' class='names current_player'>Player 1</div></td>
+                    <td><div id='1' class='square bottom right empty'></div></td>
+                    <td><div id='2' class='square bottom right empty'></div></td>
+                    <td><div id='3' class='square bottom empty'></div></td>
                     <td class='align'><div id='player2' class='names'>Player 2</div></td>
                 </tr>
 
                 <tr>
                     <td></td>
-                    <td><div id='4' class='square bottom right'></div></td>
-                    <td><div id='5' class='square bottom right'></div></td>
-                    <td><div id='6' class='square bottom'></div></td>
+                    <td><div id='4' class='square bottom right empty'></div></td>
+                    <td><div id='5' class='square bottom right empty'></div></td>
+                    <td><div id='6' class='square bottom empty'></div></td>
                     <td></td>
                 </tr>
 
                 <tr>
                     <td></td>
-                    <td><div id='7' class='square right'></div></td>
-                    <td><div id='8' class='square right'></div></td>
-                    <td><div id='9' class='square'></div></td>
+                    <td><div id='7' class='square right empty'></div></td>
+                    <td><div id='8' class='square right empty'></div></td>
+                    <td><div id='9' class='square empty'></div></td>
                     <td></td>
                 </tr>
             </tbody>
