--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <tbody>
                 <tr>
                     <td class='align'><div id='player1' class='names current_player'>Player 1</div></td>
-                    <td><div id='1' class='square bottom right empty'></div></td>
-                    <td><div id='2' class='square bottom right empty'></div></td>
-                    <td><div id='3' class='square bottom empty'></div></td>
+                    <td><div id='1' class='square bottom right empty' onclick="game(this,0)"></div></td>
+                    <td><div id='2' class='square bottom right empty' onclick="game(this,1)"></div></td>
+                    <td><div id='3' class='square bottom empty' onclick="game(this,2)"></div></td>
                     <td class='align'><div id='player2' class='names'>Player 2</div></td>
                 </tr>
 
                 <tr>
                     <td></td>
-                    <td><div id='4' class='square bottom right empty'></div></td>
-                    <td><div id='5' class='square bottom right empty'></div></td>
-                    <td><div id='6' class='square bottom empty'></div></td>
+                    <td><div id='4' class='square bottom right empty' onclick='game(this,3)'></div></td>
+                    <td><div id='5' class='square bottom right empty' onclick='game(this,4)'></div></td>
+                    <td><div id='6' class='square bottom empty' onclick='game(this,5)'></div></td>
                     <td></td>
                 </tr>
 
                 <tr>
                     <td></td>
-                    <td><div id='7' class='square right empty'></div></td>
-                    <td><div id='8' class='square right empty'></div></td>
-                    <td><div id='9' class='square empty'></div></td>
+                    <td><div id='7' class='square right empty' onclick='game(this,6)'></div></td>
+                    <td><div id='8' class='square right empty' onclick='game(this,7)'></div></td>
+                    <td><div id='9' class='square empty' onclick='game(this,8)'></div></td>
                     <td></td>
                 </tr>
             </tbody>
