Add display winner function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href='img/icon.ico' rel='icon' type='image/x-icon'>
 
         <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
         <link href='css/style.css' rel='stylesheet' type='text/css' >
     </head>
     <body>
@@ -42,6 +43,8 @@
                 </tr>
             </tbody>
         </table>
+
+        <div id="winner">Winner<br />Player 1</div>
 
         <script src='js/script.js'></script>
     </body>
